--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /*font-size: calc(10px + 2vmin);*/
+  font-size: 10px;
   color: white;
 }
 
